src/objects/WikiVersions__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RevisionCount__c</fullName>
        <label>Revision Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WikiPageId__c</fullName>
        <label>Wiki Page</label>
        <referenceTo>WikiPage__c</referenceTo>
        <relationshipLabel>Wiki Versions</relationshipLabel>
        <relationshipName>R00N30000002lOEwEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wiki Version</label>
    <nameField>
        <label>Wiki Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wiki Versions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>